# HEAVY-TOOLS

./: .env.example  .env.local.example  .eslintrc.json  .firebaserc  .gitignore  100 TUGAS PENGATURAN OMNI-TOOL.md  300_parsed.txt  AUDIO_API_DOCS.md  CONVERTER_API_DOCS.md  GEMINI.md  LICENSE  PDF_API_DOCS.md  README.md  README1.md  VIDEO_API_DOCS.md  agents.md  angular.json  anita.py  anita_core.py  audio-keys.txt  benchmark.ts  build.css  build_error.txt  build_error_utf8.txt  build_errors.txt  build_errors_3.txt  build_errors_4.txt  build_errors_5.txt  build_errors_6.txt  build_errors_8.txt  build_errors_9.txt  build_log.txt  deploy.sh  docker-compose.prod.yml  docker-compose.yml  download_ffmpeg.mjs  empty-module.js  errors.txt  eslint.config.js  extract-keys.js  (+91 more)
.Jules/: palette.md
.api/: api.json
.genkit/runtimes/: 20848-3100-1774009433855.json
.genkit/servers/: tools-19164.json  tools-9628.json
.github/workflows/: audio-ci.yml  ci-cd.yml  video-backend-ci.yml
.jules/: bolt.md  palette.md  sentinel.md
.nx/cache/: run.json
.nx/workspace-data/: a8e1b200-8a7d-4328-919b-80ea7067a9f2.db  a8e1b200-8a7d-4328-919b-80ea7067a9f2.db-shm  a8e1b200-8a7d-4328-919b-80ea7067a9f2.db-wal  file-map.json  lockfile-nodes.hash  nx_files.nxt  parsed-lock-file.dependencies.json  parsed-lock-file.nodes.json  project-graph.json  source-maps.json
anita/: anita.py  anita_core.py  anita_fix.py  anita_project.py  requirements.txt
app/applet/: fix-all.js  fix-lint-errors5.mjs
cdn/: nginx-edge.conf  nginx-prod.conf
data/: user_settings.json
docs/: CONVERTER_API_DOCS.md  PLUGIN_SDK_DOCS.md
ghost-server/: Dockerfile  database.js  package-lock.json  package.json  server.js
ghost-server/prisma/: schema.prisma
k6/: audio-proxies.js
migrations/: 001_plugin_tables.sql  002_plugin_monetization.sql  003_plugin_telemetry.sql
native/: CMakeLists.txt
native/scripts/: build-wasm.sh
native/src/audio-dsp/: audio_dsp.cpp  audio_dsp.h
native/src/bindings/: audio_embind.cpp  crypto_embind.cpp  image_embind.cpp
native/src/crypto-engine/: crypto_engine.cpp  crypto_engine.h
native/src/image-kernel/: image_kernel.cpp  image_kernel.h
omni-ai-engine/: dsp_utils.py  main.py  model_engine.py  requirements.txt
omni-plugins/omni-image-optimizer/: index.js  plugin.json
omni-worker/: Dockerfile  index.js  package.json
prisma/: schema.prisma  seed-audio.ts  seed.ts
public/wasm/: .gitkeep  omni-audio-dsp.js  omni-audio-dsp.wasm  omni-crypto-engine.js  omni-crypto-engine.wasm  omni-image-kernel.js  omni-image-kernel.wasm
scripts/: fix-exports.js  fix-settings-validation.js  fix-settings.js  fix_validate.mjs  fix_validate.ts  generate-real-settings.js  inject-real-logic.js  install-img-opt.ts  k6-loadtest.js  plugin-migrate.ts  plugin-reset.ts  plugin-seed.ts  sync_labels.mjs  verify-headers.js
scripts/load-tests/: ai-proxies.js
src/: globals.d.ts  instrumentation.ts  middleware.ts  server.ts  styles.css
src/__tests__/: audio-ffmpeg-mapper.test.ts
src/app/: app.config.server.ts  app.config.ts  app.routes.ts  app.ts  globals.css  layout.tsx  manifest.ts  page.tsx
src/components/: Navbar.tsx  (+1 more)
tmp/: fix_md.js  spectrums.json
(+1886 files in other folders)
